--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelcollective/html": "^5.2",
         "yajra/laravel-datatables-oracle": "^6.16",
         "intervention/image": "^2.3",
-        "nesbot/carbon": "^1.21"
+        "nesbot/carbon": "^1.21",
+        "kordy/ticketit": "0.*"
 
     },
     "require-dev": {
