--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap-sass": "^3.0.0",
     "grunt": "^1.0.1",
     "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0"
+    "laravel-elixir": "^5.0.0",
+    "laravel-elixir-webpack": "^1.0.1"
   }
 }
